# coin_check

./: .env  .env.example  Cargo.toml  README.md
abi/: Cargo.toml
abi/src/: lib.rs
coin_check/: .env  .env.example  Cargo.toml
coin_check/src/: main.rs
wallet_ana/: Cargo.toml  related_addresses.txt
wallet_ana/src/: main.rs
