[workspace]
resolver = "2"
members = [
    "abi",
    "wallet_ana"
]

[workspace.dependencies]
solana-client = "2.1.5"
solana-sdk = "2.1.5"
solana-transaction-status = "2.1.5"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
spl-token = "7.0.0"
spl-token-2022 = "6.0.0"