[package]
name = "wallet_ana"
version = "0.1.0"
edition = "2021"

[dependencies]
abi = { path = "../abi" }
solana-client.workspace = true
solana-sdk.workspace = true
tokio = { workspace = true }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
spl-token.workspace = true
solana-transaction-status = "2.1.5"
spl-token-2022.workspace = true
futures = "0.3"  # 添加 futures 依赖
reqwest = { version = "0.12.9", features = ["json"] }
regex = "1" 
warp = "0.3"  # 请根据需要选择合适的版本
dotenv = "0.15"  # 请根据需要选择合适的版本
log = "0.4"  # 添加 log crate
lazy_static = "1.4"  # 添加此行

[dev-dependencies]
mockall = "0.13.1"