[package]
name = "wallet_ana"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde.workspace = true
serde_json.workspace = true
abi = { path = "../abi" }
clap = { version = "4.5.20", features = ["derive"] }


